# collatz-benchmark

./: CMakeLists.txt  README.md
include/: collatz.h  monitor.h
src/: collatz.cpp  main.cpp  monitor.cpp
